fix multi post button divider not being charcoal grey on tablet dark skin

--- a/src/apps/Bradley/Pages/Customizable/Modules/MultiPostButtonModule/PostColumn/PostColumn.scss
+++ b/src/apps/Bradley/Pages/Customizable/Modules/MultiPostButtonModule/PostColumn/PostColumn.scss
@@ -93,6 +93,10 @@
       background-color: $silver;
     }
 
+    &:global(.module-skin-dark)::before {
+      background-color: $charcoal-grey;
+    }
+
     &:first-child {
       &::before {
         width: 0;
